feat: remove all pdf-menu refs
